[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "elliptic", "curves", "hash"]
description = "A suite of hash to curve ECC algorithms"
documentation = "https://docs.rs/hash2curve"
edition = "2018"
exclude = [
    "Cargo.lock",
    ".github/**",
    ".gitignore",
    "rustfmt.toml",
    "tests/**"
]
license = "Apache-2.0"
name = "hash2curve"
readme = "README.md"
repository = "https://github.com/mikelodder7/hash2curve"
version = "0.0.2"

[lib]
name = "hash2curve"
crate-type = ["rlib"]

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true

[features]
default = []
bls = ["miracl_amcl"]

[dependencies]
miracl_amcl = { version = "3.2.5", features = ["bls381"], optional = true }
digest = "0.8.1"
failure = "0.1.7"
sha2 = "0.8.1"
subtle = "2.2.2"
subtle-encoding = "0.5.1"

[dev-dependencies]
sha3 = "0.8.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]