[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "no-std"]
description = "Traits and algorithms for hashing arbitrary values to curve group element"
documentation = "https://docs.rs/hash2curve"
edition = "2018"
exclude = [
    "Cargo.lock",
    ".github/**",
    ".gitignore",
    "rustfmt.toml",
]
license = "Apache-2.0"
name = "hash2curve"
readme = "README.md"
repository = "https://github.com/mikelodder7/hash2curve"
version = "0.1.0"

[features]
default = []
alloc = ["digest/alloc"]
std = ["alloc", "digest/std"]

[dependencies]
digest = "0.9"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
